fix no-wrap h2

--- a/style.css
+++ b/style.css
@@ -61,9 +61,9 @@ header {
     text-align: center;
     margin-top: 2rem;
     h1 {
-      font-size: 2.5rem;
+      font-size: 5rem;
       margin: 0.5rem 0;
-      font-weight: bold;
+
       font-style: italic;
     }
 
@@ -114,31 +114,40 @@ main {
   }
   #cards {
     display: flex;
+    justify-content: center;
     text-align: center;
-    justify-content: space-around;
-    margin-bottom: 4rem;
-    margin-top: -4rem;
+
+    width: 100%;
+    max-width: 1200px;
+    margin: -4rem auto 4rem;
     color: white;
+    padding: 0;
   }
+
+  #cards li {
+    flex: 1;
+    margin: 0;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 5px;
+  }
+
   #cards li:nth-child(1) {
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
       url("images/item1.avif");
-
-    background-size: cover;
-    background-repeat: no-repeat;
   }
+
   #cards li:nth-child(2) {
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
-
     background-image: linear-gradient(
         rgba(33, 133, 208, 0.5),
         rgba(33, 133, 208, 0.5)
       ),
       url("images/item2.avif");
-
-    background-size: cover;
-    background-repeat: no-repeat;
+  }
+  #cards li h2 {
+    white-space: nowrap;
   }
 }
 #obj-text {
